<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="UseCompoundDrawables"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:layout_margin="5dp"
                android:src="@drawable/group_icon" />

            <TextView
                android:id="@+id/text_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            tools:ignore="UseCompoundDrawables"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_icon1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@null"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/group_icon"
                app:srcCompat="@drawable/group_icon2" />

            <TextView
                android:id="@+id/text_mess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/massage"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="UseCompoundDrawables"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_icon2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:contentDescription="@null"
                android:src="@drawable/group_icon"
                app:srcCompat="@drawable/group_icon3" />

            <TextView
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/directions"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            tools:ignore="UseCompoundDrawables"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="24dp"
                android:contentDescription="@null"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/group_icon"
                app:srcCompat="@drawable/group_icon4" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>