<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/unsplash_plsf6obtgms" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="36dp"
                        android:layout_marginEnd="33dp"
                        android:text="@string/hi"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/imageView3"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="@+id/imageView" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:contentDescription="@null"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageView"
                        app:srcCompat="@drawable/group_icon" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/find"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="357dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edittext_background"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/search"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textColor="#7A7A7A"
                    android:textColorHint="@color/primary"
                    app:layout_constraintWidth_max="488dp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="500dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:scaleType="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@null"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/subtract__1_" />

                <include
                    android:id="@+id/cards_title"
                    layout="@layout/cards"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    tools:layout_editor_absoluteY="25dp" />

                <include
                    android:id="@+id/components"
                    layout="@layout/components"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="170dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintTop_toTopOf="@+id/cards_title" />

                <include
                    android:id="@+id/views_title"
                    layout="@layout/views"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintTop_toTopOf="@+id/components" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="4dp"
            android:background="@drawable/nav_background"
            android:layout_margin="32dp">

            <include
                android:id="@+id/menu_title"
                layout="@layout/menu"
                android:layout_width="335dp"
                android:layout_height="wrap_content" />

        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>